--- a/src/App.css
+++ b/src/App.css
@@ -7,32 +7,31 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.bg {
+  background: radial-gradient(
+    circle,
+    rgba(255, 240, 247, 1) 0%,
+    rgba(173, 198, 228, 1) 100%
+  );
+  /* background: radial-gradient(
+    circle,
+    rgba(255, 255, 255, 1) 0%,
+    rgb(255, 245, 249) 100%
+  ); */
+}
+.bress-container {
+  min-height: 75vh;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrong-date-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  min-height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.wrong-date-container h1{
+  font-size: 5rem;
+  color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
